--- a/AdidasSplash/angular.json
+++ b/AdidasSplash/angular.json
@@ -128,7 +128,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
@@ -174,7 +176,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ionic/angular-toolkit"
+    "defaultCollection": "@ionic/angular-toolkit",
+    "analytics": "a23831a0-a5a4-42f9-9411-a55e946a676c"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
